Add complete comparison and statistics steps

--- a/notebooks/04-Summary-statistics.ipynb
+++ b/notebooks/04-Summary-statistics.ipynb
@@ -53,6 +53,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "a1f1af08",
+   "metadata": {},
+   "source": [
+    "### Define reference designator for chosen variable"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "b10bf1f8",
@@ -67,19 +76,45 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "153683f4",
+   "metadata": {},
+   "source": [
+    "### Load local QARTOD test flags from processed dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f1c7e2ed",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Build path to data files with local test results and load to workspace - Might not use this\n",
-    "# gr_local_test_path = build_data_path(refdes,method,stream,'prod-gr-result',folder='processed')\n",
-    "# clim_local_test_path = build_data_path(refdes, method, stream, 'prod-clim-result', folder=\"processed\")\n",
+    "# Build path to data files with local test results and load to workspace - Might not use this\n",
+    "local_test_path = build_data_path(refdes, method, stream, 'prod-clim-result', folder=\"processed\")\n",
     "\n",
-    "# # Load local test data from .nc files\n",
-    "# gr_results_local = xr.open_dataset(gr_local_test_path)\n",
-    "# clim_results_local = xr.open_dataset(clim_local_test_path)"
+    "# Load local test data from .nc files\n",
+    "local_test_results = xr.open_dataset(local_test_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee79b2e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "local_test_results"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "74c7a106",
+   "metadata": {},
+   "source": [
+    "### Extract and parse expected QC results"
    ]
   },
   {
@@ -199,7 +234,93 @@
    "outputs": [],
    "source": [
     "# Parse all of the variables with QARTOD tests applied into separate tests\n",
-    "results_expected = parse_qartod_executed(ds_expected, parameters)"
+    "results_expected = parse_qartod_executed(ds_expected, parameters)\n",
+    "results_expected"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "16cd5b8a",
+   "metadata": {},
+   "source": [
+    "### Comparing local results of QARTOD tests to expected results "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3901c5f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# using Andrew's example:\n",
+    "\n",
+    "def run_comparison(ds, param, test_results):\n",
+    "    \"\"\"\n",
+    "    Runs a comparison between the qartod gross range results returned as part of the dataset\n",
+    "    and results calculated locally.\n",
+    "    \"\"\"\n",
+    "    # Get the local test results and convert to string type for comparison\n",
+    "    local_results = test_results[param].astype(str)\n",
+    "    \n",
+    "    # Run comparison\n",
+    "    not_equal = np.where(ds[f\"{param}_qartod_gross_range_test\"] != local_results)[0]\n",
+    "    \n",
+    "    if len(not_equal) == 0:\n",
+    "        return None\n",
+    "    else:\n",
+    "        return not_equal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3eea3e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Identify differences in the results\n",
+    "test_comparison = dict()\n",
+    "\n",
+    "for index, param in enumerate(parameters):\n",
+    "    print(\"Checking for mismatched QARTOD flags in \"f\"{param}\")\n",
+    "    flag_mismatch = run_comparison(results_expected, param, local_test_results)\n",
+    "\n",
+    "    if flag_mismatch is None:\n",
+    "        print(\"No mismatched values found\")\n",
+    "        test_comparison.update({f\"{param}\": {\n",
+    "                \"index\": \"\",\n",
+    "                \"expected flags\": \"\",\n",
+    "                \"local test flags\": \"\"\n",
+    "            }\n",
+    "        })\n",
+    "    else:         \n",
+    "        test_comparison.update({f\"{param}\":{\n",
+    "                \"index\": flag_mismatch,\n",
+    "                \"expected flags\": results_expected[f\"{param}_qartod_gross_range_test\"][flag_mismatch].values,\n",
+    "                \"local test flags\": local_test_results[param][flag_mismatch].values\n",
+    "            }\n",
+    "        })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8dbb9d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_comparison"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "25dd005f",
+   "metadata": {},
+   "source": [
+    "### Prepare CSV with statistics about QARTOD results"
    ]
   },
   {
@@ -357,7 +478,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csv_path = build_data_path(refdes, method, stream, 'qartod-stats', folder='processed', suffix='.csv')\n",
+    "csv_path = build_data_path(refdes, method, stream, 'qartod-clim-stats', folder='processed', suffix='.csv')\n",
     "qartod_flag_stats.to_csv(csv_path)"
    ]
   },
