Add local test comparison to stats dict

--- a/notebooks/04- Climatology-comparison-statistics.ipynb
+++ b/notebooks/04- Climatology-comparison-statistics.ipynb
@@ -290,14 +290,14 @@
     "    if flag_mismatch is None:\n",
     "        print(\"No mismatched values found\")\n",
     "        test_comparison.update({f\"{param}\": {\n",
-    "                \"index\": \"\",\n",
+    "                \"local test mismatch index\": \"\",\n",
     "                \"expected flags\": \"\",\n",
     "                \"local test flags\": \"\"\n",
     "            }\n",
     "        })\n",
     "    else:         \n",
     "        test_comparison.update({f\"{param}\":{\n",
-    "                \"index\": flag_mismatch,\n",
+    "                \"local test mismatch index\": flag_mismatch,\n",
     "                \"expected flags\": results_expected[f\"{param}_qartod_gross_range_test\"][flag_mismatch].values,\n",
     "                \"local test flags\": local_test_results[param][flag_mismatch].values\n",
     "            }\n",
@@ -457,7 +457,7 @@
     }
    ],
    "source": [
-    "qartod_results = qartod_results_summary(results_expected, parameters, [\"gross_range\", \"climatology\"])\n",
+    "qartod_results = qartod_results_summary(results_expected, parameters, [\"climatology\"])\n",
     "qartod_results"
    ]
   },
