--- a/notebooks/01-Request-and-download-data.ipynb
+++ b/notebooks/01-Request-and-download-data.ipynb
@@ -6009,6 +6009,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "579c9255",
+   "metadata": {},
+   "source": [
+    "### Save datasets for test in production to interim data folder for further processing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "a8d540ca",
@@ -9395,7 +9404,7 @@
    "id": "bcf34610",
    "metadata": {},
    "source": [
-    "### Save datasets to interim data folder for further processing"
+    "### Save datasets for test in development to interim data folder for further processing"
    ]
   },
   {
@@ -9405,18 +9414,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We will perform tests on datasets in production and development separately, so each xarray dataset is saved in a separate netCDF file\n",
-    "\n",
     "interim_data = os.path.relpath('../data/interim')           # path to interim data folder from notebook folder\n",
     "\n",
     "dev_filename = '-'.join(('dev',ds_dev.id,))+'.nc'           # build ds_dev filename from dataset attributes\n",
-    "prod_filename = '-'.join(('prod',ds_prod.id,))+'.nc'        # ds_prod filename from dataset attribute\n",
     "\n",
     "dev_path=os.path.join(interim_data, dev_filename)           # build full relative path with ds_dev filename\n",
-    "prod_path=os.path.join(interim_data, prod_filename)         # repeat for ds_prod\n",
     "\n",
-    "ds_dev.to_netcdf(path=dev_path)                             # provide both relative path and filename for ds_dev in path parameter\n",
-    "ds_prod.to_netcdf(path=prod_path)                           # repeat for ds_prod"
+    "ds_dev.to_netcdf(path=dev_path)                             # provide both relative path and filename for ds_dev in path parameter"
    ]
   },
   {
@@ -9444,7 +9448,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
