Edit env activation instructions

--- a/notebooks/01-Request-and-download-data.ipynb
+++ b/notebooks/01-Request-and-download-data.ipynb
@@ -27,7 +27,7 @@
     "    # configure the OOI python environment\n",
     "    conda env create -f environment.yml\n",
     "    conda init # might be required for windows users if environment is not active\n",
-    "    conda activate ooi\n",
+    "    conda activate qartod_test\n",
     "\n",
     "    # you can check the active environment by running\n",
     "    conda env list\n",
