Update modules called in notebooks

--- a/notebooks/02-local-QARTOD-test.ipynb
+++ b/notebooks/02-local-QARTOD-test.ipynb
@@ -47,7 +47,7 @@
     "import dask\n",
     "from dask.diagnostics import ProgressBar\n",
     "\n",
-    "from qartod_testing import data_processing as dp"
+    "import qartod_testing.data_processing as dp"
    ]
   },
   {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "4992c4a5",
    "metadata": {},
    "outputs": [
@@ -120,13 +120,13 @@
        "'..\\\\data\\\\interim\\\\prod-CP01CNSM-RID27-03-CTDBPC000-recovered_inst-ctdbp_cdef_instrument_recovered.nc'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ds_path = build_data_path(refdes,method,stream,'prod')\n",
+    "ds_path = dp.build_data_path(refdes,method,stream,'prod')\n",
     "ds_path"
    ]
   },
@@ -1186,7 +1186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gr_results_path = build_data_path(refdes,method,stream,(type+'-gr-result'),folder='processed') # Build path with filename to folder for saved results\n",
+    "gr_results_path = dp.build_data_path(refdes,method,stream,(type+'-gr-result'),folder='processed') # Build path with filename to folder for saved results\n",
     "\n",
     "gr_ds.to_netcdf(gr_results_path)                                             # write netCDF file with results to processed data folder"
    ]
@@ -1621,7 +1621,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clim_results_path = build_data_path(refdes,method,stream,(type+'-clim-result'),folder='processed') # Build path with filename to folder for saved results\n",
+    "clim_results_path = dp.build_data_path(refdes,method,stream,(type+'-clim-result'),folder='processed') # Build path with filename to folder for saved results\n",
     "\n",
     "climatology_ds.to_netcdf(clim_results_path)                                                   # write netCDF file with results to processed data folder"
    ]
