--- a/notebooks/03-Gross-range-comparison-statistics.ipynb
+++ b/notebooks/03-Gross-range-comparison-statistics.ipynb
@@ -49,7 +49,7 @@
    "outputs": [],
    "source": [
     "# Import function to build relative path to data files\n",
-    "from qartod_testing.data_processing import build_data_path"
+    "import qartod_testing.data_processing as dp"
    ]
   },
   {
@@ -97,7 +97,7 @@
    "outputs": [],
    "source": [
     "# Build path to data files with local test results and load to workspace\n",
-    "local_test_path = build_data_path(refdes,method,stream,'prod-gr-result',folder='processed')\n",
+    "local_test_path = dp.build_data_path(refdes,method,stream,'prod-gr-result',folder='processed')\n",
     "\n",
     "# Load local test data from .nc files\n",
     "local_test_results = xr.open_dataset(local_test_path)"
@@ -551,7 +551,7 @@
    ],
    "source": [
     "# Load expected results data from interim data folder\n",
-    "expected_ds_path = build_data_path(refdes,method,stream,'prod',folder='interim')\n",
+    "expected_ds_path = dp.build_data_path(refdes,method,stream,'prod',folder='interim')\n",
     "ds_expected = xr.open_dataset(expected_ds_path)\n",
     "\n",
     "# Create a dictionary of key-value pairs of dataset variable name:alternate parameter name\n",
@@ -1510,7 +1510,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csv_path = build_data_path(refdes, method, stream, 'qartod-gr-stats', folder='processed', suffix='.csv')\n",
+    "csv_path = dp.build_data_path(refdes, method, stream, 'qartod-gr-stats', folder='processed', suffix='.csv')\n",
     "qartod_flag_stats.to_csv(csv_path)"
    ]
   },
