fix drop_vars assignment

--- a/notebooks/11-Deep-dive-CP01CNSM-RID26-08-SPKIRB000.ipynb
+++ b/notebooks/11-Deep-dive-CP01CNSM-RID26-08-SPKIRB000.ipynb
@@ -20,6 +20,7 @@
     "import xarray as xr\n",
     "import os\n",
     "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
@@ -44,16 +45,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'spkir_abj_dcl_instrument_recovered'"
+       "{'recovered_host': ['spkir_abj_dcl_instrument_recovered'],\n",
+       " 'telemetered': ['spkir_abj_dcl_instrument']}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +115,7 @@
        "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>CGINS-SPKIRB-00238</td>\n",
-       "      <td>2387</td>\n",
+       "      <td>2407</td>\n",
        "      <td>40.13678</td>\n",
        "      <td>-70.76978</td>\n",
        "      <td>7.0</td>\n",
@@ -126,7 +128,7 @@
        "      <th>1</th>\n",
        "      <td>2</td>\n",
        "      <td>CGINS-SPKIRB-00272</td>\n",
-       "      <td>1387</td>\n",
+       "      <td>1392</td>\n",
        "      <td>40.1339</td>\n",
        "      <td>-70.7789</td>\n",
        "      <td>7.0</td>\n",
@@ -139,7 +141,7 @@
        "      <th>2</th>\n",
        "      <td>3</td>\n",
        "      <td>CGINS-SPKIRB-00272</td>\n",
-       "      <td>1387</td>\n",
+       "      <td>1392</td>\n",
        "      <td>40.14022</td>\n",
        "      <td>-70.77128</td>\n",
        "      <td>7.0</td>\n",
@@ -152,7 +154,7 @@
        "      <th>3</th>\n",
        "      <td>4</td>\n",
        "      <td>CGINS-SPKIRB-00291</td>\n",
-       "      <td>1327</td>\n",
+       "      <td>1332</td>\n",
        "      <td>40.13323</td>\n",
        "      <td>-70.77843</td>\n",
        "      <td>7.0</td>\n",
@@ -165,7 +167,7 @@
        "      <th>4</th>\n",
        "      <td>5</td>\n",
        "      <td>CGINS-SPKIRB-00270</td>\n",
-       "      <td>1390</td>\n",
+       "      <td>1395</td>\n",
        "      <td>40.14037</td>\n",
        "      <td>-70.77133</td>\n",
        "      <td>7.0</td>\n",
@@ -178,7 +180,7 @@
        "      <th>5</th>\n",
        "      <td>6</td>\n",
        "      <td>CGINS-SPKIRB-00291</td>\n",
-       "      <td>1327</td>\n",
+       "      <td>1332</td>\n",
        "      <td>40.13342</td>\n",
        "      <td>-70.77847</td>\n",
        "      <td>7.0</td>\n",
@@ -191,7 +193,7 @@
        "      <th>6</th>\n",
        "      <td>7</td>\n",
        "      <td>CGINS-SPKIRB-00270</td>\n",
-       "      <td>1390</td>\n",
+       "      <td>1395</td>\n",
        "      <td>40.139817</td>\n",
        "      <td>-70.77115</td>\n",
        "      <td>7.0</td>\n",
@@ -204,7 +206,7 @@
        "      <th>7</th>\n",
        "      <td>8</td>\n",
        "      <td>CGINS-SPKIRB-00275</td>\n",
-       "      <td>1401</td>\n",
+       "      <td>1406</td>\n",
        "      <td>40.133383</td>\n",
        "      <td>-70.7783</td>\n",
        "      <td>7.0</td>\n",
@@ -217,7 +219,7 @@
        "      <th>8</th>\n",
        "      <td>9</td>\n",
        "      <td>CGINS-SPKIRB-00299</td>\n",
-       "      <td>1337</td>\n",
+       "      <td>1342</td>\n",
        "      <td>40.13975</td>\n",
        "      <td>-70.77128</td>\n",
        "      <td>7.0</td>\n",
@@ -230,7 +232,7 @@
        "      <th>9</th>\n",
        "      <td>10</td>\n",
        "      <td>CGINS-SPKIRB-00271</td>\n",
-       "      <td>1392</td>\n",
+       "      <td>1397</td>\n",
        "      <td>40.133367</td>\n",
        "      <td>-70.7777</td>\n",
        "      <td>7.0</td>\n",
@@ -243,7 +245,7 @@
        "      <th>10</th>\n",
        "      <td>11</td>\n",
        "      <td>CGINS-SPKIRB-00276</td>\n",
-       "      <td>1398</td>\n",
+       "      <td>1403</td>\n",
        "      <td>40.1401</td>\n",
        "      <td>-70.77137</td>\n",
        "      <td>7.0</td>\n",
@@ -256,7 +258,7 @@
        "      <th>11</th>\n",
        "      <td>12</td>\n",
        "      <td>CGINS-SPKIRB-00288</td>\n",
-       "      <td>1304</td>\n",
+       "      <td>1309</td>\n",
        "      <td>40.1332</td>\n",
        "      <td>-70.7783</td>\n",
        "      <td>7.0</td>\n",
@@ -269,7 +271,7 @@
        "      <th>12</th>\n",
        "      <td>13</td>\n",
        "      <td>CGINS-SPKIRB-00230</td>\n",
-       "      <td>2384</td>\n",
+       "      <td>2404</td>\n",
        "      <td>40.140517</td>\n",
        "      <td>-70.769643</td>\n",
        "      <td>7.0</td>\n",
@@ -282,7 +284,7 @@
        "      <th>13</th>\n",
        "      <td>14</td>\n",
        "      <td>CGINS-SPKIRB-00240</td>\n",
-       "      <td>2295</td>\n",
+       "      <td>2313</td>\n",
        "      <td>40.132833</td>\n",
        "      <td>-70.778</td>\n",
        "      <td>7.0</td>\n",
@@ -295,7 +297,7 @@
        "      <th>14</th>\n",
        "      <td>15</td>\n",
        "      <td>CGINS-SPKIRB-00272</td>\n",
-       "      <td>1387</td>\n",
+       "      <td>1392</td>\n",
        "      <td>40.139823</td>\n",
        "      <td>-70.771173</td>\n",
        "      <td>7.0</td>\n",
@@ -308,7 +310,7 @@
        "      <th>15</th>\n",
        "      <td>16</td>\n",
        "      <td>CGINS-SPKIRB-00290</td>\n",
-       "      <td>1325</td>\n",
+       "      <td>1330</td>\n",
        "      <td>40.13325</td>\n",
        "      <td>-70.778317</td>\n",
        "      <td>7.0</td>\n",
@@ -323,22 +325,22 @@
       ],
       "text/plain": [
        "   deploymentNumber                 uid assetId   latitude  longitude depth  \\\n",
-       "0                 1  CGINS-SPKIRB-00238    2387   40.13678  -70.76978   7.0   \n",
-       "1                 2  CGINS-SPKIRB-00272    1387    40.1339   -70.7789   7.0   \n",
-       "2                 3  CGINS-SPKIRB-00272    1387   40.14022  -70.77128   7.0   \n",
-       "3                 4  CGINS-SPKIRB-00291    1327   40.13323  -70.77843   7.0   \n",
-       "4                 5  CGINS-SPKIRB-00270    1390   40.14037  -70.77133   7.0   \n",
-       "5                 6  CGINS-SPKIRB-00291    1327   40.13342  -70.77847   7.0   \n",
-       "6                 7  CGINS-SPKIRB-00270    1390  40.139817  -70.77115   7.0   \n",
-       "7                 8  CGINS-SPKIRB-00275    1401  40.133383   -70.7783   7.0   \n",
-       "8                 9  CGINS-SPKIRB-00299    1337   40.13975  -70.77128   7.0   \n",
-       "9                10  CGINS-SPKIRB-00271    1392  40.133367   -70.7777   7.0   \n",
-       "10               11  CGINS-SPKIRB-00276    1398    40.1401  -70.77137   7.0   \n",
-       "11               12  CGINS-SPKIRB-00288    1304    40.1332   -70.7783   7.0   \n",
-       "12               13  CGINS-SPKIRB-00230    2384  40.140517 -70.769643   7.0   \n",
-       "13               14  CGINS-SPKIRB-00240    2295  40.132833    -70.778   7.0   \n",
-       "14               15  CGINS-SPKIRB-00272    1387  40.139823 -70.771173   7.0   \n",
-       "15               16  CGINS-SPKIRB-00290    1325   40.13325 -70.778317   7.0   \n",
+       "0                 1  CGINS-SPKIRB-00238    2407   40.13678  -70.76978   7.0   \n",
+       "1                 2  CGINS-SPKIRB-00272    1392    40.1339   -70.7789   7.0   \n",
+       "2                 3  CGINS-SPKIRB-00272    1392   40.14022  -70.77128   7.0   \n",
+       "3                 4  CGINS-SPKIRB-00291    1332   40.13323  -70.77843   7.0   \n",
+       "4                 5  CGINS-SPKIRB-00270    1395   40.14037  -70.77133   7.0   \n",
+       "5                 6  CGINS-SPKIRB-00291    1332   40.13342  -70.77847   7.0   \n",
+       "6                 7  CGINS-SPKIRB-00270    1395  40.139817  -70.77115   7.0   \n",
+       "7                 8  CGINS-SPKIRB-00275    1406  40.133383   -70.7783   7.0   \n",
+       "8                 9  CGINS-SPKIRB-00299    1342   40.13975  -70.77128   7.0   \n",
+       "9                10  CGINS-SPKIRB-00271    1397  40.133367   -70.7777   7.0   \n",
+       "10               11  CGINS-SPKIRB-00276    1403    40.1401  -70.77137   7.0   \n",
+       "11               12  CGINS-SPKIRB-00288    1309    40.1332   -70.7783   7.0   \n",
+       "12               13  CGINS-SPKIRB-00230    2404  40.140517 -70.769643   7.0   \n",
+       "13               14  CGINS-SPKIRB-00240    2313  40.132833    -70.778   7.0   \n",
+       "14               15  CGINS-SPKIRB-00272    1392  40.139823 -70.771173   7.0   \n",
+       "15               16  CGINS-SPKIRB-00290    1330   40.13325 -70.778317   7.0   \n",
        "\n",
        "           deployStart           deployEnd deployCruise recoverCruise  \n",
        "0  2013-11-21 18:16:00 2014-04-18 10:33:00        KN214         KN217  \n",
@@ -398,16 +400,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\cooleyky\\\\ooidata\\\\m2m\\\\cp01cnsm\\\\CP01CNSM-RID26-08-SPKIRB000-recovered_host-spkir_abj_dcl_instrument_recovered.nc'"
+       "'C:\\\\Users\\\\kylene.cooley\\\\ooidata\\\\m2m\\\\cp01cnsm\\\\CP01CNSM-RID26-08-SPKIRB000-recovered_host-spkir_abj_dcl_instrument_recovered.nc'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +447,7 @@
     "    host_data = common.m2m_collect(r)\n",
     "    \n",
     "    # Temporarily drop variables with fill values not handled well while writing netcdf to disk\n",
-    "    host_data.drop_vars(['instrument_id', 'dcl_controller_timestamp', 'serial_number'])\n",
+    "    host_data = host_data.drop_vars(['instrument_id', 'dcl_controller_timestamp', 'serial_number'])\n",
     "    host_data.to_netcdf(file_path, mode='w', format='NETCDF4', engine='h5netcdf')"
    ]
   },
@@ -748,7 +750,7 @@
     "annotations = pd.DataFrame(annotations)\n",
     "annotations\n",
     "\n",
-    "# Note: none of the beginDTs or endDTs are in a huma-readable format."
+    "# Note: none of the beginDTs or endDTs are in a human-readable format."
    ]
   },
   {
@@ -1879,7 +1881,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
