Limit data request to a single deployment

--- a/notebooks/11-Deep-dive-CP01CNSM-RID26-08-SPKIRB000.ipynb
+++ b/notebooks/11-Deep-dive-CP01CNSM-RID26-08-SPKIRB000.ipynb
@@ -63,12 +63,10 @@
    "source": [
     "methods = common.list_methods(site, node, sensor)\n",
     "streams = {}\n",
+    "\n",
     "for method in methods:\n",
     "    streams[method] = common.list_streams(site, node, sensor, method)\n",
-    "    \n",
-    "    # for stream in streams:\n",
-    "    #     r = common.m2m_request(site, node, sensor, method, stream)\n",
-    "    #     data = common.m2m_collect(r)\n",
+    "\n",
     "streams\n"
    ]
   },
@@ -418,6 +416,7 @@
     "# Set method and stream strings\n",
     "method = methods[0]\n",
     "stream = streams[method][0]\n",
+    "start = deployments[0][\"deployStart\"]\n",
     "\n",
     "# Set file name and path to data file\n",
     "data_file = '-'.join([refdes, method, stream]) + '.nc'\n",
@@ -1881,7 +1880,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
