Evaluate statistics on gross range test flags

--- a/notebooks/02-local-QARTOD-test.ipynb
+++ b/notebooks/02-local-QARTOD-test.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "fdc560f6-ac10-42fd-9098-94b60db5faf9",
    "metadata": {
     "tags": []
@@ -91,7 +91,7 @@
        "14"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,12 +102,13 @@
     "\n",
     "# retrieve list of netCDF files in this directory\n",
     "files = glob.glob(folder_path+'/*.nc')\n",
+    "# files = [file for file in # I started trying to remove files with blank in the name with more generalized way and ran out of time\n",
     "len(files)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "d0f14319-c62b-4e23-b22a-0f1f25789b73",
    "metadata": {
     "tags": []
@@ -143,8 +144,10 @@
     "    if len(test_parameters) > 0:\n",
     "        gross_range_results = dp.qartod_gross_range_test(refdes, stream, test_parameters, ds)\n",
     "        gross_range_results = dp.timeseries_dict_to_xarray(gross_range_results, ds)\n",
+    "        gross_range_results['deployment'] = ds['deployment'] # used in sorting and merging all deployments\n",
     "        climatology_results = dp.qartod_climatology_test(refdes, stream, test_parameters, ds)\n",
     "        climatology_results = dp.timeseries_dict_to_xarray(climatology_results, ds)\n",
+    "        climatology_results['deployment'] = ds['deployment']\n",
     "    else:\n",
     "        pass\n",
     "\n",
@@ -198,31 +201,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "4992c4a5",
+   "execution_count": 7,
+   "id": "535946f9-0fc0-498b-90b6-50bbf2e79dac",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'..\\\\data\\\\interim\\\\prod-CP01CNSM-RID27-03-CTDBPC000-recovered_inst-ctdbp_cdef_instrument_recovered.nc'"
+       "array([7, 7, 7, 7, 7], dtype=int32)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ds_path = dp.build_data_path(refdes,method,stream,'prod')\n",
-    "ds_path"
+    "gross_range_results['deployment'][0:5].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4992c4a5",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/jovyan/code/qartod_testing/data/external/recovered_inst/ctdbp_cdef_instrument_recovered/CP01CNSM-MFD37-03-CTDBPD000/deployment0007_CP01CNSM-MFD37-03-CTDBPD000-recovered_inst-ctdbp_cdef_instrument_recovered_20170609T143001-20170830T155050.nc'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file"
    ]
   },
   {
@@ -232,8 +252,7 @@
    "metadata": {
     "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
+     "outputs_hidden": true
     },
     "tags": []
    },
@@ -701,7 +720,10 @@
   {
    "cell_type": "markdown",
    "id": "499a4f2e",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "### Identify Test Parameters\n",
     "\n",
@@ -777,6 +799,7 @@
    "cell_type": "markdown",
    "id": "9b119cdf",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -877,7 +900,10 @@
   {
    "cell_type": "markdown",
    "id": "987de098",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "### Save test results to processed data folder"
    ]
