Simplify comparison and statistics on QARTOD flags

--- a/notebooks/04- Climatology-comparison-statistics.ipynb
+++ b/notebooks/04- Climatology-comparison-statistics.ipynb
@@ -603,78 +603,7 @@
     "ds_expected = xr.open_dataset(files[-3])\n",
     "\n",
     "# Create a dictionary of key-value pairs of dataset variable name:alternate parameter name\n",
-    "test_parameters={}\n",
-    "for var in ds_expected.variables:\n",
-    "    if \"qartod_results\" in var:\n",
-    "        # Get the parameter name\n",
-    "        param = var.split(\"_qartod\")[0]\n",
-    "        \n",
-    "        # Check if the parameter has an alternative ooinet_name\n",
-    "        if \"alternate_parameter_name\" in ds_expected[param].attrs:\n",
-    "            ooinet_name = ds_expected[param].attrs[\"alternate_parameter_name\"]\n",
-    "        else:\n",
-    "            ooinet_name = param\n",
-    "        \n",
-    "        # Save the results in a dictionary\n",
-    "        test_parameters.update({\n",
-    "            param: ooinet_name\n",
-    "        })\n",
-    "# Print out the results\n",
-    "test_parameters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "9c665180",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "def parse_qartod_executed(ds, parameters):\n",
-    "    \"\"\"\n",
-    "    Parses the qartod tests for the given parameter into separate variables.\n",
-    "    \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    ds: xarray.DataSet\n",
-    "        The dataset downloaded from OOI with the QARTOD flags applied.\n",
-    "    parameters: list[str]\n",
-    "        The name of the parameters in the dataset to parse the QARTOD flags\n",
-    "        \n",
-    "    Returns\n",
-    "    -------\n",
-    "    ds: xarray.DataSet\n",
-    "        The dataset with the QARTOD test for the given parameters split out\n",
-    "        into new seperate data variables using the naming convention:\n",
-    "        {parameter}_qartod_{test_name}\n",
-    "    \"\"\"\n",
-    "    # For the params into a list if only a string\n",
-    "    if type(parameters) is not list:\n",
-    "        parameters = list(parameters)\n",
-    "    \n",
-    "    # Iterate through each parameter\n",
-    "    for param in parameters:\n",
-    "        # Generate the qartod executed name\n",
-    "        qartod_name = f\"{param}_qartod_executed\"\n",
-    "        \n",
-    "        if qartod_name not in ds.variables:\n",
-    "            continue\n",
-    "    \n",
-    "        # Fix the test types\n",
-    "        ds[qartod_name] = ds[qartod_name].astype(str)\n",
-    "    \n",
-    "        # Get the test order\n",
-    "        test_order = ds[qartod_name].attrs[\"tests_executed\"].split(\",\")\n",
-    "    \n",
-    "        # Iterate through the available tests and create separate variables with the results\n",
-    "        for test in test_order:\n",
-    "            test_index = test_order.index(test)\n",
-    "            test_name = f\"{param}_qartod_{test.strip()}\"\n",
-    "            ds[test_name] = ds[qartod_name].str.get(test_index)\n",
-    "\n",
-    "    return ds"
+    "test_parameters = dp.get_test_parameters(ds_expected)"
    ]
   },
   {
@@ -695,6 +624,10 @@
    "execution_count": 18,
    "id": "128134fb",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -1153,7 +1086,7 @@
    ],
    "source": [
     "# Parse all of the variables with QARTOD tests applied into separate tests\n",
-    "results_expected = parse_qartod_executed(ds_expected, parameters)\n",
+    "results_expected = dp.parse_qartod_executed(ds_expected, parameters)\n",
     "results_expected"
    ]
   },
@@ -1162,6 +1095,10 @@
    "execution_count": 19,
    "id": "02beb497-b29a-449f-a82c-fdae179dd276",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -1594,41 +1531,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "3901c5f0",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# using Andrew's example:\n",
-    "\n",
-    "def run_comparison(ds, param, test_results):\n",
-    "    \"\"\"\n",
-    "    Runs a comparison between the qartod climatology results returned as part of the dataset\n",
-    "    and results calculated locally.\n",
-    "    \"\"\"\n",
-    "    test_name = f\"{param}_qartod_climatology_test\"\n",
-    "    if test_name not in ds.variables:\n",
-    "        return None\n",
-    "    \n",
-    "    # Get the local test results and convert to string type for comparison\n",
-    "    local_results = test_results[param].astype(str)\n",
-    "    \n",
-    "    # Run comparison\n",
-    "    not_equal = np.where(ds[f\"{param}_qartod_climatology_test\"] != local_results)[0]\n",
-    "    \n",
-    "    if len(not_equal) == 0:\n",
-    "        return None\n",
-    "    else:\n",
-    "        return not_equal"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 21,
    "id": "d3eea3e6",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -1653,7 +1562,7 @@
     "\n",
     "for index, param in enumerate(parameters):\n",
     "    print(\"Checking for mismatched QARTOD flags in \"f\"{param}\")\n",
-    "    flag_mismatch = run_comparison(results_expected, param, local_test_results)\n",
+    "    flag_mismatch = dp.run_comparison(results_expected, param, local_test_results)\n",
     "\n",
     "    if flag_mismatch is None:\n",
     "        print(\"No mismatched values found\")\n",
@@ -2179,98 +2088,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "08d21460",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "def qartod_results_summary(ds, params, test, test_comparison):\n",
-    "    \"\"\"\n",
-    "    Calculate the statistics for parameter qartod flags.\n",
-    "    \n",
-    "    This function takes in a list of the parameters and\n",
-    "    the associated QARTOD tests to calculate the number\n",
-    "    of each flag and the percent of the flag.\n",
-    "    \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    ds: xarray.DataSet\n",
-    "        An xarray dataset which contains the data\n",
-    "    params: list[strings]\n",
-    "        A list of the variables/parameters in the given\n",
-    "        dataset that have been tested with QARTOD\n",
-    "    tests: list[strings]\n",
-    "        A list of the QARTOD test names which to parse\n",
-    "        for the given parameters.\n",
-    "        \n",
-    "    Returns\n",
-    "    -------\n",
-    "    results: dict\n",
-    "        A dictionary which contains the number of each\n",
-    "        QARTOD flag and the percent of the total flags\n",
-    "        for each test applied to each parameter in the\n",
-    "        given dataset.\n",
-    "        \n",
-    "        results = {'parameter':\n",
-    "                        {'test_name':\n",
-    "                            {'total data points': int,\n",
-    "                            'good data points': (int, %),\n",
-    "                            'suspect data points': (int, %),\n",
-    "                            'bad data points': (int, %)}\n",
-    "                            },\n",
-    "                        }\n",
-    "    \"\"\"\n",
-    "    # Check that the inputs are a list\n",
-    "    if type(params) is not list:\n",
-    "        params = [params]\n",
-    "        \n",
-    "    # Initialize the result dictionary and iterate \n",
-    "    # through the parameters for each test\n",
-    "    results = {}\n",
-    "    for param in params:\n",
-    "        \n",
-    "        # Now create dictionary of results for test\n",
-    "        test_results = {}\n",
-    "        \n",
-    "        # First, check that the test was applied\n",
-    "        test_name = f\"{param}_qartod_{test}_test\"\n",
-    "        if test_name not in ds.variables:\n",
-    "            continue\n",
-    "            \n",
-    "        # Count the total number of values\n",
-    "        n = ds[test_name].count().compute().values\n",
-    "        \n",
-    "        # First calculate the gross range results\n",
-    "        good = np.where(ds[test_name] == \"1\")[0]\n",
-    "\n",
-    "        # Count the number of suspect/interesting\n",
-    "        suspect = np.where(ds[test_name] == \"3\")[0]\n",
-    "\n",
-    "        # Count the number of fails\n",
-    "        bad = np.where(ds[test_name] == \"4'\")[0]\n",
-    "\n",
-    "        test_results.update({\"total\": int(n),\n",
-    "            \"good\": (len(good), np.round(len(good)/n*100, 2)),\n",
-    "            \"suspect\": (len(suspect), np.round(len(suspect)/n*100, 2)),\n",
-    "            \"fail\": (len(bad), np.round(len(bad)/n*100, 2))\n",
-    "            }\n",
-    "        )\n",
-    "    \n",
-    "        if f\"{param}_mismatched_flags\" in test_comparison:\n",
-    "            for label in test_comparison[f\"{param}_mismatched_flags\"]: test_results.update({label: (len(test_comparison[f\"{param}_mismatched_flags\"][label]), np.round(len(test_comparison[f\"{param}_mismatched_flags\"][label])/n*100, 2))})\n",
-    "    \n",
-    "        # Save the test results for each parameter\n",
-    "        results.update({\n",
-    "            param: test_results\n",
-    "        })\n",
-    "    \n",
-    "    return results"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 24,
    "id": "54731ba1-2f41-41d4-8e1a-3377bed135df",
    "metadata": {
@@ -2322,7 +2139,7 @@
     }
    ],
    "source": [
-    "qartod_results = qartod_results_summary(results_expected, parameters, \"climatology\", test_comparison)\n",
+    "qartod_results = dp.qartod_results_summary(results_expected, parameters, \"climatology\")\n",
     "qartod_results"
    ]
   },
