Update format for statistics and validation tables

--- a/notebooks/04- Climatology-comparison-statistics.ipynb
+++ b/notebooks/04- Climatology-comparison-statistics.ipynb
@@ -75,10 +75,7 @@
     "# Set reference designator, data stream, and method \n",
     "method = \"recovered_inst\"                       \n",
     "stream = \"ctdbp_cdef_instrument_recovered\"   \n",
-    "refdes = \"CP01CNSM-MFD37-03-CTDBPD000\"              \n",
-    "\n",
-    "# Site, node, and sensor info from deconstructed reference designator\n",
-    "[site, node, sensor] = refdes.split('-', 2)"
+    "refdes = \"CP01CNSM-MFD37-03-CTDBPD000\"              "
    ]
   },
   {
@@ -113,9 +110,8 @@
     "folder_path = os.path.join(os.path.abspath('../data/interim'), method, stream, refdes)\n",
     "\n",
     "# retrieve list of netCDF files in this directory\n",
-    "files = glob.glob(folder_path+'/climatology*.nc')\n",
-    "# files = [file for file in # I started trying to remove files with blank in the name with more generalized way and ran out of time\n",
-    "len(files)"
+    "local_files = glob.glob(folder_path+'/climatology*.nc')\n",
+    "# files = [file for file in # I started trying to remove files with blank in the name with more generalized way and ran out of time"
    ]
   },
   {
@@ -573,7 +569,7 @@
     "folder_path = os.path.join(os.path.abspath('../data/external'), method, stream, refdes)\n",
     "\n",
     "# retrieve list of netCDF files in this directory\n",
-    "files = glob.glob(folder_path+'/*.nc')\n",
+    "expected_files = glob.glob(folder_path+'/*.nc')\n",
     "files[-3]"
    ]
   },
