Cut unused functions in notebooks and update function docstrings

--- a/notebooks/01-Request-and-download-data.ipynb
+++ b/notebooks/01-Request-and-download-data.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "548967d3",
    "metadata": {
     "tags": []
@@ -73,7 +73,7 @@
    "outputs": [],
    "source": [
     "# Setup parameters needed to request data\n",
-    "refdes = \"CP01CNSM-MFD37-03-CTDBPD000\"\n",
+    "refdes = \"CP01CNSM-RID27-03-CTDBPC000\"\n",
     "method = \"recovered_inst\"\n",
     "stream = \"ctdbp_cdef_instrument_recovered\"\n",
     "\n",
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "38249131",
    "metadata": {
     "tags": []
@@ -101,7 +101,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading and Processing Data Files: 100%|██████████| 14/14 [00:19<00:00,  1.41s/it]\n"
+      "Downloading and Processing Data Files: 100%|██████████| 14/14 [01:06<00:00,  4.78s/it]\n"
      ]
     }
    ],
@@ -116,6 +116,7 @@
    "cell_type": "markdown",
    "id": "f0d49e9e",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
